--- a/src/components/components.css
+++ b/src/components/components.css
@@ -71,7 +71,7 @@
     font-weight: 600;
 }
 
-.info-tab button{
+.main-btn{
     background-color: var(--main-color);
     color: white;
     border: none;
@@ -80,7 +80,7 @@
     cursor: pointer;
 }
 
-.info-tab button:hover{
+.main-btn:hover{
     background-color: var(--main-hover);
 }
 
@@ -108,11 +108,11 @@
     align-items: center;
     background-color: white;
     font-size: 20px;
-    padding: 15px 20px;
+    padding: 5px 20px;
     border-radius: 25px;
     box-shadow: 1px 4px 0px 0px rgba(0,0,0,0.75);
--webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
--moz-box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 1px 1px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 1px 2px 10px 0px rgba(0,0,0,0.75);
 }
 
 .searchTerm {
