--- a/src/pages/page.css
+++ b/src/pages/page.css
@@ -1,3 +1,28 @@
+.sticky-nav{
+    background-color: #EEF2FA;
+    position: sticky;
+    top: 30px;
+    padding: 5px 10px;
+    margin: 10px 0px;
+    z-index: 5;
+    
+}
+
+.side-main{
+    width: 250px;
+}
+
+.sticky-side{
+    position: fixed;
+    z-index: 6;
+}
+
+
+.dashboard-layout{
+    display: grid;
+    grid-template-columns: 1fr 8fr;
+}
+
 .dash-card{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
